Features like jpa/aop/rest are available out of the box in extension